--- a/MJ's wigs.html
+++ b/MJ's wigs.html
@@ -48,7 +48,7 @@
     padding: 10px 20px;
 }
 .navbar .logo a {
-    color: black;
+    color: rgb(239, 13, 13);
     text-decoration: none;
     font-size: 24px;
 }
